--- a/style.css
+++ b/style.css
@@ -40,14 +40,16 @@ body {
     background-color: #31363b;
 }
 
-:profil {
-    box-shadow: 2px 6px black;
+.profil {
+    box-shadow: 2px 4px 10px 2px #31363b;
 }
 
 
 .logo {
     background-color: #b92e81;
     border-radius: 50%;
+    box-shadow: 2px 4px 10px 4px #31363b;
+    
     position: absolute;
 left: 180px;
 top: 150px;
