--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ top: 150px;
     text-transform: uppercase;
     font-family: Montserrat;
     display: inline-block;
+    border-top: 1px rgb(174, 169, 169);
 }
 
 .odkazy a{
